# haskell-matlab

./: .gitignore  LICENSE  README  README.md  Setup.hs  configure  configure.ac  deps.nix  matlab.buildinfo.in  matlab.cabal  patchMATLAB.sh  runHSMat.sh  shell.nix  stack.yaml
Foreign/: Matlab.hs
Foreign/Matlab/: Array.hsc  Config.hs  Config.hs.in  EIOArray.hs  EIOArray.hsc  Engine.hsc  Exceptions.hs  Internal.hsc  MAT.hsc  Optics.hsc  Runtime.hsc  Types.hs  Util.hs  ZIOArray.hs  ZIOArray.hsc  ZIOEngine.hs  ZIOMAT.hs  ZIOTypes.hs
Foreign/Matlab/Array/: Able.hs  Auto.hs  IMX.hs  Internal.hsc  MArray.hs
Foreign/Matlab/Engine/: Wrappers.hs
Foreign/Matlab/Runtime/: Generic.hs
Foreign/Matlab/ZIOEngine/: Wrappers.hs
attic/: Array_interpreter.hs
hello/: SpecHello.hs
src/: Makefile  Makefile.in  hsc_sym.h  hsmatlab.c  hsmatlab.m  libhsmatlab.c  libhsmatlab.exports  libhsmatlab.h  readme.txt
test/: Makefile  Makefile.in  SpecEngine.hs  engine.hs  fiveSquares.mat  generic.hs  helloCell.mat  hsmli.hs  mMapTest.m  makeTestStruct.m  makeTestStructByteStream.m  mcellTest.m  mtest.m  runtime.hs  useTestStruct.m
test/Test/: Engine.hs  Util.hs  UtilTemplate.hs
