Name:                matlab
Version:             0.1.1.2
Cabal-Version:       >= 1.10
Author:              Dylan Simon
Maintainer:          dylan@dylex.net
License:             BSD3
Synopsis:            Matlab bindings and interface
Description:         This package aims to provide a comprehensive interface to the 
                     MathWorks MATLAB(R) libraries and native data structures, including
                     complete matrix access, MAT-format files, linking and execution of 
                     runtime libraries and engine.  Requires MATLAB for full functionality 
                     or an installed Matlab Component Runtime (MCR). This has been tested
                     with MATLAB 7.5-7.7 and might work with others.
Category:            Foreign,Math
build-type:          Custom
tested-with:         GHC == 7.8.3
extra-source-files:  src/Makefile src/hsmatlab.m src/hsmatlab.c src/hsc_sym.h
                     test/Makefile test/engine.hs test/runtime.hs 
                     test/generic.hs test/mtest.m test/hsmli.hs

Flag Engine
  Description:       Enable Matlab engine (spawned eng process) support
  default:           True
Flag Runtime
  Description:       Enable Matlab runtime (linked library) support
  default:           False

Library
  default-language:   Haskell2010
  Build-depends:      base >= 4 && < 5,
                      array < 0.6,
                      filepath < 1.4,
                      Cabal < 1.21
  Exposed-modules:    Foreign.Matlab,
                      Foreign.Matlab.Types,
                      Foreign.Matlab.Array,
                      Foreign.Matlab.Array.Auto,
                      Foreign.Matlab.Array.MArray,
                      Foreign.Matlab.Array.IMX,
                      Foreign.Matlab.Array.Able,
                      Foreign.Matlab.MAT
  Other-modules:      Foreign.Matlab.Util, Foreign.Matlab.Internal
  default-extensions: ForeignFunctionInterface,
                      MultiParamTypeClasses,
                      FunctionalDependencies,
                      FlexibleInstances
  ghc-options:        -Wall -fno-warn-name-shadowing
  include-dirs:       src/
  extra-libraries:    mx, mat

  if flag(runtime)
      build-tools:     mcc
      Build-depends:   unix < 2.8
      Exposed-modules: Foreign.Matlab.Runtime, Foreign.Matlab.Runtime.Generic

  if flag(engine)
    Exposed-modules:  Foreign.Matlab.Engine
    extra-libraries:  eng
